Updated README files; Improved source code format; Added project and identity headers for some source files.

--- a/webServer/src/main/resources/web/realtime.html
+++ b/webServer/src/main/resources/web/realtime.html
@@ -5,41 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Distributed Computing Project</title>
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link href="justified-nav.css" rel="stylesheet">
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="realtime.js"></script>
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="masthead">
-			<nav>
-				<ul class="nav nav-justified">
-					<li><a href="index.html">Introduction</a></li>
-					<li><a href="brisbane.html">Brisbane</a></li>
-					<li><a href="melbourne.html">Melbourne</a></li>
-					<li><a href="sydney.html">Sydney</a></li>
-					<li class="active"><a href="realtime.html">Real Time</a></li>
-				</ul>
-			</nav>
-		</div>
-		<div class="main">
-			<h3 class="lead text-primary" style="padding-left: 10px">Real Time Tweets in Three Cities</h3>
-			<div class="col-md-4">
-				<div id="map-canvas-bri" style="width: 100%; height: 500px; padding: 10px"></div>
-			</div>
-			<div class="col-md-4">
-				<div id="map-canvas-mel" style="width: 100%; height: 500px; padding: 10px"></div>
-			</div>
-			<div class="col-md-4">
-				<div id="map-canvas-syd" style="width: 100%; height: 500px; padding: 10px"></div>
-			</div>
-		</div>
-	</div>
+    <div class="container-fluid">
+        <div class="masthead">
+            <nav>
+                <ul class="nav nav-justified">
+                    <li><a href="index.html">Introduction</a></li>
+                    <li><a href="brisbane.html">Brisbane</a></li>
+                    <li><a href="melbourne.html">Melbourne</a></li>
+                    <li><a href="sydney.html">Sydney</a></li>
+                    <li class="active"><a href="realtime.html">Real Time</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="main">
+            <h3 class="lead text-primary" style="padding-left: 10px">Real
+                Time Tweets in Three Cities</h3>
+            <div class="col-md-4">
+                <div id="map-canvas-bri"
+                    style="width: 100%; height: 500px; padding: 10px"></div>
+            </div>
+            <div class="col-md-4">
+                <div id="map-canvas-mel"
+                    style="width: 100%; height: 500px; padding: 10px"></div>
+            </div>
+            <div class="col-md-4">
+                <div id="map-canvas-syd"
+                    style="width: 100%; height: 500px; padding: 10px"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
