--- a/webServer/src/main/resources/web/index.html
+++ b/webServer/src/main/resources/web/index.html
@@ -5,62 +5,71 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Distributed Computing Project</title>
 <link rel="stylesheet"
-	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link href="justified-nav.css" rel="stylesheet">
 <script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script
-	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="index.js"></script>
 </head>
 
 <body>
-	<div class="container-fluid">
-		<div class="masthead">
-			<nav>
-				<ul class="nav nav-justified">
-					<li class="active"><a href="index.html">Introduction</a></li>
-					<li><a href="brisbane.html">Brisbane</a></li>
-					<li><a href="melbourne.html">Melbourne</a></li>
-					<li><a href="sydney.html">Sydney</a></li>
-					<li><a href="realtime.html">Real Time</a></li>
-				</ul>
-			</nav>
-		</div>
-		<div class="jumbotron">
-			<h1>Twitter and Transport Congestion</h1>
-			<h3 class="text-muted">By harvesting tweets along the main roads
-				of 3 cities in Australia</h3>
-		</div>
+    <div class="container-fluid">
+        <div class="masthead">
+            <nav>
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="index.html">Introduction</a></li>
+                    <li><a href="brisbane.html">Brisbane</a></li>
+                    <li><a href="melbourne.html">Melbourne</a></li>
+                    <li><a href="sydney.html">Sydney</a></li>
+                    <li><a href="realtime.html">Real Time</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="jumbotron">
+            <h1>Twitter and Transport Congestion</h1>
+            <h3 class="text-muted">By harvesting tweets along the main roads
+                of 3 cities in Australia</h3>
+        </div>
 
-		<div class="main" style="padding-left: 10px; padding-right: 10px;">
-			<div class="page-header">
-				<p class="lead text-primary">This is the web presentation of
-					Distributed Computing Project, Semester 1 2015.</p>
-				<p class="lead text-primary">Project Title: Use of Twitter for
-					Identification of (Near) Real Time Transport Congestion across the
-					Cities of Australia</p>
-				<p class="lead text-primary">
-					Student & Email: Fengmin Deng <em><u>dengf@student.unimelb.edu.au</u></em>
-				</p>
-				<p class="lead text-primary">Supervisor: Professor Richard
-					Sinnott</p>
-			</div>
-			<br />
-			<h3>Project Description</h3>
-			<p>This project has attempted to explore the relevance of tweeting on the roads to traffic congestion. The system is developed by firstly adopting the 'road block searching' algorithm devised by Yikai Gong (MSc Dissertation, 2014) to an implementation for any city. Secondly three instances in NeCTAR cloud are deployed to harvest main roads tweets from Brisbane, Melbourne and Sydney. Thirdly the transport congestion are tagged after running ELKI (release 0.6), a clustering application with customized distance function. Last a visualization mapping is built to represent the clustering of tweets along the road.</p>
-			<br />
-			<h3>Implementation Structure</h3>
-			<img src="system.png" alt="" /> <br /> <br />
-			<h3 id="date">Harvested Tweets from 21 April 2015 to 1 June 2015</h3>
-			<ul>
-				<li><p id="bn">Brisbane:</p></li>
-				<li><p id="mn">Melbourne:</p></li>
-				<li><p id="sn">Sydney:</p></li>
-			</ul>
-			<br />
-		</div>
-	</div>
+        <div class="main" style="padding-left: 10px; padding-right: 10px;">
+            <div class="page-header">
+                <p class="lead text-primary">This is the web presentation of
+                    Distributed Computing Project, Semester 1 2015.</p>
+                <p class="lead text-primary">Project Title: Use of Twitter for
+                    Identification of (Near) Real Time Transport Congestion across the
+                    Cities of Australia</p>
+                <p class="lead text-primary">
+                    Student & Email: Fengmin Deng <em><u>dengf@student.unimelb.edu.au</u></em>
+                </p>
+                <p class="lead text-primary">Supervisor: Professor Richard
+                    Sinnott</p>
+            </div>
+            <br />
+            <h3>Project Description</h3>
+            <p>This project has attempted to explore the relevance of
+                tweeting on the roads to traffic congestion. The system is developed
+                by firstly adopting the 'road block searching' algorithm devised by
+                Yikai Gong (MSc Dissertation, 2014) to an implementation for any
+                city. Secondly three instances in NeCTAR cloud are deployed to
+                harvest main roads tweets from Brisbane, Melbourne and Sydney.
+                Thirdly the transport congestion are tagged after running ELKI
+                (release 0.6), a clustering application with customized distance
+                function. Last a visualization mapping is built to represent the
+                clustering of tweets along the road.</p>
+            <br />
+            <h3>Implementation Structure</h3>
+            <img src="system.png" alt="" /> <br /> <br />
+            <h3 id="date">Harvested Tweets from 21 April 2015 to 1 June 2015</h3>
+            <ul>
+                <li><p id="bn">Brisbane:</p></li>
+                <li><p id="mn">Melbourne:</p></li>
+                <li><p id="sn">Sydney:</p></li>
+            </ul>
+            <br />
+        </div>
+    </div>
 
 </body>
 </html>
